--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
+        "ws": "laravel-echo-server start",
+        "ws:dev": "concurrently \"laravel-echo-server start\" \"npm run dev\"",
+        "build:ws": "concurrently \"laravel-echo-server start\" \"npm run build\"",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix",
@@ -15,6 +18,7 @@
         "@eslint/js": "^9.19.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.3",
         "@types/node": "^22.13.5",
+        "@types/socket.io-client": "^3.0.0",
         "babel-plugin-react-compiler": "^1.0.0",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -56,7 +60,7 @@
         "lucide-react": "^0.475.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "socket.io-client": "^4.8.1",
+        "socket.io-client": "^2.5.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tw-animate-css": "^1.4.0",
