--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "build:ssr": "vite build && vite build --ssr",
+        "build": "vite build && pm2 restart laravel-echo-server",
+        "build:ssr": "vite build && vite build --ssr && pm2 restart laravel-echo-server",
         "dev": "vite",
         "ws": "laravel-echo-server start",
         "ws:dev": "concurrently \"laravel-echo-server start\" \"npm run dev\"",
+        "ws:pm2": "pm2 start echo-pm2.json",
+        "ws:pm2:stop": "pm2 stop laravel-echo-server",
+        "ws:pm2:restart": "pm2 restart laravel-echo-server",
+        "ws:pm2:logs": "pm2 logs laravel-echo-server",
+        "ws:pm2:autostart": "pm2 startup && pm2 save",
         "build:ws": "concurrently \"laravel-echo-server start\" \"npm run build\"",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
