--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "lucide-react": "^0.475.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "recharts": "^3.5.1",
         "socket.io-client": "^2.5.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
